--- a/style.css
+++ b/style.css
@@ -161,3 +161,18 @@ button:hover {
   align-items: flex-end;
   text-align: end;
 }
+
+/*products*/
+
+.product {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+
+.product img {
+  transition: 0.3s all;
+}
+
+.product:hover img {
+  opacity: 0.7;
+}
