--- a/style.css
+++ b/style.css
@@ -20,10 +20,26 @@ button:hover {
   background-color: #3a3833;
 }
 
+hr {
+  width: 30px;
+  height: 2px;
+  background-color: coral;
+}
+
+.star i {
+  font-size: 0.8rem;
+  color: goldenrod;
+}
+
+.star {
+  padding: 10px 0;
+}
+
 .navbar {
   font-size: 16px;
   top: 0;
   left: 0;
+  box-shadow: 0 5px 10px rgb(0, 0, 0, 0.1);
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -62,7 +78,7 @@ button:hover {
 
 #bar:hover,
 #bar.active {
-  color: white;
+  color: #fff;
 }
 
 @media only screen and (max-width: 991px) {
@@ -72,7 +88,7 @@ button:hover {
   }
   body > nav > div > button:hover #bar,
   body > nav > div > button:focus #bar {
-    background-color: white;
+    background-color: coral;
   }
 
   #navbarSupportedContent > ul {
@@ -187,4 +203,81 @@ button:hover {
 .product:hover .buy-btn {
   transform: translateY(0);
   opacity: 1;
+}
+
+#banner {
+  background-image: url("img/back2.jpg");
+  width: 100%;
+  height: 60vh;
+  background-size: cover;
+  background-position: top 70px center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#banner h4 {
+  color: #636363;
+}
+
+#banner h1 {
+  color: #a3a3a3;
+}
+
+#banner button {
+  background-color: coral;
+}
+
+#payment {
+  height: 60px;
+  width: 60px;
+}
+
+footer {
+  background-color: #3a3833;
+}
+
+footer h5 {
+  color: #d8d8d8;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+footer li {
+  padding-bottom: 4px;
+}
+
+footer li a {
+  font-size: 0.8rem;
+  color: #999;
+}
+
+footer li a:hover {
+  color: #d8d8d8;
+}
+
+footer p {
+  color: #999;
+  font-size: 0.8rem;
+}
+
+footer .copyright a {
+  color: #000;
+  width: 38px;
+  height: 38px;
+  background-color: #fff;
+  display: inline-block;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
+  transition: 0.3s ease;
+  margin: 0 5px;
+}
+
+footer .copyright a:hover {
+  color: #fff;
+  background-color: coral;
 }
