--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ hr {
 }
 
 #banner {
-  background-image: url("img/back2.jpg");
+  background-image: url("img/back.avif");
   width: 100%;
   height: 60vh;
   background-size: cover;
